EZ-3981 Fix spacing between footer and content

--- a/App/PluginWeb/EzBob.Web/Content/css/EverlineCustomerProfile.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/EverlineCustomerProfile.css
@@ -10,10 +10,12 @@ body {
 	font-size: 62.5%;
 }
 
-#profile-content{
-
-	width: 960px;
-	box-sizing: border-box;
+#profile-content {
+    margin-bottom:40px;
+    width: 960px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 	padding: 0 10px;
 }
 
